--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,8 +4,29 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
-        
-        
+        {
+            "name": "Debug Pokemon_tests",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/Lab/Lab5/eecs280_pokemon_lab/Pokemon_tests.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/Lab/Lab5/eecs280_pokemon_lab",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Set Disassembly Flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ]
+        }
     ]
 }
